# hyperpico

./: CMakeLists.txt  README.md  lwipopts.h  main.cpp  readme.txt  tusb_config.h
config/: iopins.h  platform_config.h
decomp/: decrunch.c  readme.txt
display/: hdmi_framebuffer.cpp  hdmi_framebuffer.h  pico_dsp.cpp  pico_dsp.h
flashfs/: fatfs_disk.h  fatfs_disk_ro.c
flashfs/fatfs/: ffconf.h
gfx/: gfx.h  gfx_color.S  gfx_sprite16.S  gfx_text8.S  gfx_tile16.S  gfx_tile8.S  hypergfx.cpp  hypergfx.h
hypertrspico/: hypertrspico.cpp
network/: dhcpserver.c  dhcpserver.h  network.cpp  network.h
pet/: MOS6502Memory.h  basic4_b000.h  basic4_c000.h  basic4_d000.h  edit4.h  edit450.h  edit480.h  edit48050.h  fb.h  kernal4.h  memmap.cpp  memmap.h  pet_intf.h  petbus.pio  petfont.h  vsync.h
prgs/pet/demos/: mariovsy.prg  scroll.prg  vsync.prg
prgs/pet/others/: demo.prg  graphic-3032.prg  graphic-4032.prg  graphic-8032.prg  npa.prg  poker.prg  poker8032.prg  transactor.prg
prgs/pet/petscii/: candman.prg  cosraider.prg  halloween_demo  leapfrog.prg  petaxian.prg  petlifter.prg  psi2.prg  pssp.prg  supgloop.prg
prgs/pet/petscii_nok/: acrobat.prg
prgs/pet/src_samples/: bitmap4.prg  bmp_bobafat.cru  conv  conv.c  fb.h  fb.prg  gc.fnt  mariohivsy.prg  sid.prg  sprites.prg  starwars.cru  tile8.prg  waves.prg
prgs/pet/src_samples_test/: bitmap.prg  fbtest.prg  fill.prg  filu.prg  pactiles.prg  sa.cru  sb.cru  sc.cru  sd.cru
prgs/pet/src_samples_tuto/: ryd.fnt  si.prg
prgs/pet/src_samples_tuto/tuto1/: sk.prg
prgs/pet/src_samples_tuto/tuto2/: sk.prg
prgs/pet/src_samples_tuto/tuto3/: sk.prg
prgs/pet/src_samples_tuto/tuto4/: 7up.fnt  lunar.cru  si.cru  sk.prg
prgs/trs80/cmd/: bitmap3.cmd  ghost13.cmd  hello.cmd  penetrat.cmd  scarfman.cmd  seadrag.cmd  vkey
prgs/trs80/src_samples/: bitmap.asm  bmp_darkvador.cru  conv  fb.cmd  fb.h  fbrom.asm  test.asm
resid/: reSID.cpp  readme.txt
resid/reSID/: sid.cc
tools/6502assembler/: readme.txt
tools/6502assembler/src_samples/: bitmap1.prg  bitmap2.prg  bitmap3.prg  bitmap5.prg  bmp_starwars2.cru  fb.prg  font.prg  key.prg  mario.prg  spranim.prg  starwars.prg  tile16.prg  tile16l1.prg
tools/png2pet/: Makefile  decrunch.c  decrunch.h  gifdec.c  gifdecmem.c  gifdecmem.h  gifenc.c  png2pet.c  pucrunch.c  readme.txt  sa.raw  sb.raw  sc.raw
tools/vkey/: Makefile  bitmap.cmd  bitmap1.cmd  bitmap2.cmd  bitmap4.cmd  gammon.bas  ghost14.cmd  meteor.cmd  rect.cmd  swamp.cmd  vkey.c
tools/z80assembler/: bmp_jabba.cru  bmp_padawan.cru  conv.c  fb.asm  fb.cmd  hello.asm  vkey  z80asm
trs80/: busreadwrite.pio  clock.pio  grafyx.cpp  io.cpp  io.h  memmap.cpp  memmap.h  pioirq.S  trs.cpp  trs.h  trs_memory.cpp  trs_memory.h  trs_screen.h
usb_kbd/: hid_app.c  kbd.h
usb_serial/: dev_lowlevel.c  dev_lowlevel.h  readme.txt  usb_serial.h
